[package]
name = "tyson"
version = "0.1.0"
authors = ["Roman Right <roman-right@protonmail.com>"]
edition = "2021"
description = "Typed Simple Object Notation"
readme = "README.md"
license = "Apache-2.0"
exclude = [
    "assets/*",
]


[dependencies]
pest = "2.1.3"
pest_derive = "2.1.0"
custom_error = "1.9.2"